[gd_scene load_steps=16 format=3 uid="uid://dhjahduqke6r7"]

[ext_resource type="Script" path="res://Character/Scripts/movements.gd" id="1_hxc5g"]
[ext_resource type="Texture2D" uid="uid://x1bhejmle5mi" path="res://Character/Sprites/char_07.png" id="2_cbtw8"]
[ext_resource type="Script" path="res://Character/Scripts/LineEdit.gd" id="3_5g4gc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a43fh"]
atlas = ExtResource("2_cbtw8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj5wa"]
atlas = ExtResource("2_cbtw8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmrt5"]
atlas = ExtResource("2_cbtw8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfg47"]
atlas = ExtResource("2_cbtw8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch2h6"]
atlas = ExtResource("2_cbtw8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uosl"]
atlas = ExtResource("2_cbtw8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvu3m"]
atlas = ExtResource("2_cbtw8")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ki4u"]
atlas = ExtResource("2_cbtw8")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xw74"]
atlas = ExtResource("2_cbtw8")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp00b"]
atlas = ExtResource("2_cbtw8")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k5rfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a43fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj5wa")
}],
"loop": true,
"name": &"down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmrt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfg47")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch2h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uosl")
}],
"loop": true,
"name": &"left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvu3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ki4u")
}],
"loop": true,
"name": &"right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xw74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp00b")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhogy"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_hxc5g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k5rfo")
animation = &"up"
autoplay = "idle"
frame_progress = 0.164228

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xhogy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 124.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -31.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Action"
alignment = 1
script = ExtResource("3_5g4gc")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2

[connection signal="focus_entered" from="Control/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="Control/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="mouse_entered" from="Control/LineEdit" to="Control/LineEdit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/LineEdit" to="Control/LineEdit" method="_on_mouse_exited"]
[connection signal="text_submitted" from="Control/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="Control/LineEdit" to="Control/LineEdit" method="_on_text_submitted"]
